@@ -31,10 +31,11 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.astraea.common.FutureUtils;
 import org.astraea.common.admin.Admin;
+import org.astraea.common.admin.Broker;
 import org.astraea.common.admin.ClusterInfo;
-import org.astraea.common.admin.NodeInfo;
 import org.astraea.common.admin.Replica;
 import org.astraea.common.admin.TopicPartition;
+import org.astraea.common.admin.TopicPartitionPath;
 import org.astraea.common.admin.TopicPartitionReplica;
 import org.astraea.common.json.TypeRef;
 
@@ -90,11 +91,9 @@ public class ReassignmentHandler implements Handler {
                               if (excludedBroker.isEmpty())
                                 return CompletableFuture.completedFuture(Response.BAD_REQUEST);
                               var availableBrokers =
-                                  brokers.stream()
-                                      .filter(b -> b.id() != exclude)
-                                      .collect(Collectors.toList());
+                                  brokers.stream().filter(b -> b.id() != exclude).toList();
                               var partitions =
-                                  excludedBroker.get().topicPartitions().stream()
+                                  excludedBroker.get().topicPartitionPaths().stream()
                                       .filter(
                                           tp ->
                                               excludeNode.topic.isEmpty()
@@ -106,14 +105,16 @@ public class ReassignmentHandler implements Handler {
                                   partitions.stream()
                                       .collect(
                                           Collectors.toMap(
-                                              tp -> tp,
+                                              TopicPartitionPath::topicPartition,
                                               tp -> {
                                                 var ids =
                                                     availableBrokers.stream()
                                                         .filter(
-                                                            b -> b.topicPartitions().contains(tp))
-                                                        .map(NodeInfo::id)
-                                                        .collect(Collectors.toList());
+                                                            b ->
+                                                                b.topicPartitionPaths()
+                                                                    .contains(tp))
+                                                        .map(Broker::id)
+                                                        .toList();
                                                 if (!ids.isEmpty()) return ids;
                                                 return List.of(
                                                     availableBrokers
@@ -131,7 +132,7 @@ public class ReassignmentHandler implements Handler {
             Stream.of(process2Folders, process2Nodes, processExclude)
                 .flatMap(Function.identity())
                 .map(CompletionStage::toCompletableFuture)
-                .collect(Collectors.toUnmodifiableList()))
+                .toList())
         .thenApply(
             rs -> {
               if (!rs.isEmpty() && rs.stream().allMatch(r -> r == Response.ACCEPT))
@@ -161,7 +162,7 @@ public class ReassignmentHandler implements Handler {
                           r ->
                               new AddingReplica(
                                   r, leaderSizes.getOrDefault(r.topicPartition(), 0L)))
-                      .collect(Collectors.toUnmodifiableList()));
+                      .toList());
             });
   }
 
@@ -213,7 +214,7 @@ public class ReassignmentHandler implements Handler {
     AddingReplica(Replica addingReplica, long leaderSize) {
       this.topicName = addingReplica.topic();
       this.partition = addingReplica.partition();
-      this.broker = addingReplica.nodeInfo().id();
+      this.broker = addingReplica.brokerId();
       this.dataFolder = addingReplica.path();
       this.size = addingReplica.size();
       this.leaderSize = leaderSize;
