@@ -17,7 +17,6 @@
 package org.astraea.app.web;
 
 import static java.util.Objects.requireNonNull;
-import static java.util.stream.Collectors.toList;
 
 import java.time.Duration;
 import java.util.Base64;
@@ -45,7 +44,6 @@ import org.astraea.common.consumer.ConsumerConfigs;
 import org.astraea.common.consumer.Deserializer;
 import org.astraea.common.consumer.SeekStrategy;
 import org.astraea.common.consumer.SubscribedConsumer;
-import org.astraea.common.json.JsonConverter;
 import org.astraea.common.json.TypeRef;
 import org.astraea.common.producer.Producer;
 import org.astraea.common.producer.ProducerConfigs;
@@ -163,8 +161,7 @@ public class RecordHandler implements Handler {
   // visible for testing
   GetResponse get(Consumer<byte[], byte[]> consumer, int limit, Duration timeout) {
     try {
-      return new GetResponse(
-          consumer, consumer.poll(timeout).stream().map(Record::new).collect(toList()));
+      return new GetResponse(consumer, consumer.poll(timeout).stream().map(Record::new).toList());
     } catch (Exception e) {
       consumer.close();
       throw e;
@@ -190,9 +187,7 @@ public class RecordHandler implements Handler {
                 () -> {
                   try {
                     return producer.send(
-                        records.stream()
-                            .map(record -> createRecord(producer, record))
-                            .collect(toList()));
+                        records.stream().map(record -> createRecord(producer, record)).toList());
                   } finally {
                     if (producer.transactional()) {
                       producer.close();
@@ -214,7 +209,7 @@ public class RecordHandler implements Handler {
                                           return Response.for404("missing result");
                                         }))
                             .map(CompletionStage::toCompletableFuture)
-                            .collect(toList())));
+                            .toList()));
 
     if (postRequest.async()) return CompletableFuture.completedFuture(Response.ACCEPT);
     return CompletableFuture.completedFuture(
@@ -403,15 +398,10 @@ public class RecordHandler implements Handler {
     }
 
     @Override
-    public String json() {
-      return JsonConverter.defaultConverter().toJson(this);
-    }
-
-    @Override
     public void onComplete(Throwable error) {
       try {
-        if (error == null && consumer instanceof SubscribedConsumer) {
-          ((SubscribedConsumer<byte[], byte[]>) consumer).commitOffsets(Duration.ofSeconds(5));
+        if (error == null && consumer instanceof SubscribedConsumer subscribedConsumer) {
+          subscribedConsumer.commitOffsets(Duration.ofSeconds(5));
         }
       } finally {
         consumer.close();
@@ -438,7 +428,7 @@ public class RecordHandler implements Handler {
       timestamp = record.timestamp();
       serializedKeySize = record.serializedKeySize();
       serializedValueSize = record.serializedValueSize();
-      headers = record.headers().stream().map(Header::new).collect(toList());
+      headers = record.headers().stream().map(Header::new).toList();
       key = record.key();
       value = record.value();
       leaderEpoch = record.leaderEpoch().orElse(null);
