@@ -27,6 +27,7 @@ import java.util.concurrent.CompletionException;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+import org.astraea.common.Configuration;
 import org.astraea.common.Utils;
 import org.astraea.common.admin.Admin;
 import org.astraea.common.admin.TopicPartition;
@@ -69,7 +70,9 @@ public class TopicHandlerTest {
               Admin.of(SERVICE.bootstrapServers()),
               0,
               id -> SERVICE.jmxServiceURL().getPort(),
-              Duration.ofMillis(5))) {
+              Duration.ofMillis(5),
+              Configuration.EMPTY,
+              List.of())) {
         Response<TopicHandler.Topics> response =
             HttpExecutor.builder()
                 .build()
@@ -322,8 +325,7 @@ public class TopicHandlerTest {
 
   @Test
   void testDeleteTopic() {
-    var topicNames =
-        IntStream.range(0, 3).mapToObj(x -> Utils.randomString(10)).collect(Collectors.toList());
+    var topicNames = IntStream.range(0, 3).mapToObj(x -> Utils.randomString(10)).toList();
     try (var admin = Admin.of(SERVICE.bootstrapServers())) {
       var handler = new TopicHandler(admin);
       for (var name : topicNames)
