@@ -24,6 +24,7 @@ import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.SortedSet;
@@ -200,7 +201,7 @@ public class AdminTest {
             var replicas =
                 admin.clusterInfo(Set.of(t.name())).toCompletableFuture().join().replicas();
             Assertions.assertNotEquals(0, replicas.size());
-            replicas.forEach(r -> Assertions.assertEquals(t.internal(), r.internal()));
+            replicas.forEach(r -> Assertions.assertEquals(t.internal(), r.isInternal()));
             replicas.forEach(r -> Assertions.assertFalse(r.isAdding()));
             replicas.forEach(r -> Assertions.assertFalse(r.isRemoving()));
           });
@@ -345,7 +346,7 @@ public class AdminTest {
               .toCompletableFuture()
               .join());
 
-      Assertions.assertInstanceOf(List.class, admin.nodeInfos().toCompletableFuture().join());
+      Assertions.assertInstanceOf(List.class, admin.brokers().toCompletableFuture().join());
 
       var brokers = admin.brokers().toCompletableFuture().join();
       Assertions.assertEquals(
@@ -358,7 +359,7 @@ public class AdminTest {
               .sorted(
                   Comparator.comparing(Replica::topic)
                       .thenComparing(Replica::partition)
-                      .thenComparing(r -> r.nodeInfo().id()))
+                      .thenComparing(Replica::brokerId))
               .collect(Collectors.toList()),
           replicas);
     }
@@ -378,10 +379,10 @@ public class AdminTest {
       var ids =
           List.of(
               SERVICE.dataFolders().keySet().stream()
-                  .filter(i -> i != partition.leader().get().id())
+                  .filter(i -> !Objects.equals(i, partition.leaderId().get()))
                   .findFirst()
                   .get(),
-              partition.leader().get().id());
+              partition.leaderId().get());
       admin.moveToBrokers(Map.of(TopicPartition.of(topic, 0), ids)).toCompletableFuture().join();
       Utils.sleep(Duration.ofSeconds(2));
 
@@ -390,7 +391,7 @@ public class AdminTest {
       var newPartition = newPartitions.get(0);
       Assertions.assertEquals(ids.size(), newPartition.replicas().size());
       Assertions.assertEquals(ids.size(), newPartition.isr().size());
-      Assertions.assertNotEquals(ids.get(0), newPartition.leader().get().id());
+      Assertions.assertNotEquals(ids.get(0), newPartition.leaderId().get());
 
       admin
           .preferredLeaderElection(
@@ -400,7 +401,7 @@ public class AdminTest {
       Utils.sleep(Duration.ofSeconds(2));
       Assertions.assertEquals(
           ids.get(0),
-          admin.partitions(Set.of(topic)).toCompletableFuture().join().get(0).leader().get().id());
+          admin.partitions(Set.of(topic)).toCompletableFuture().join().get(0).leaderId().get());
     }
   }
 
@@ -416,7 +417,7 @@ public class AdminTest {
       var replica = replicas.get(0);
       var idAndFolder =
           SERVICE.dataFolders().entrySet().stream()
-              .filter(e -> e.getKey() == replica.nodeInfo().id())
+              .filter(e -> e.getKey() == replica.brokerId())
               .map(e -> Map.of(e.getKey(), e.getValue().iterator().next()))
               .findFirst()
               .get();
@@ -433,7 +434,7 @@ public class AdminTest {
       Assertions.assertEquals(1, newReplicas.size());
 
       var newReplica = newReplicas.get(0);
-      Assertions.assertEquals(idAndFolder.get(newReplica.nodeInfo().id()), newReplica.path());
+      Assertions.assertEquals(idAndFolder.get(newReplica.brokerId()), newReplica.path());
     }
   }
 
@@ -589,7 +590,7 @@ public class AdminTest {
                   r ->
                       Replica.builder(r)
                           .path(
-                              source.brokerFolders().get(r.nodeInfo().id()).stream()
+                              source.brokerFolders().get(r.brokerId()).stream()
                                   .filter(p -> !p.equals(r.path()))
                                   .findAny()
                                   .orElseThrow())
@@ -719,8 +720,7 @@ public class AdminTest {
               .replicaStream()
               .iterator()
               .next()
-              .nodeInfo()
-              .id();
+              .brokerId();
       var paths = new ArrayList<>(SERVICE.dataFolders().get(id));
 
       for (var path : paths) {
@@ -849,17 +849,16 @@ public class AdminTest {
 
       var config = admin.topics(Set.of(topic)).toCompletableFuture().join().get(0).config();
       var partitions =
-          admin.partitions(Set.of(topic)).toCompletableFuture().join().stream()
-              .collect(Collectors.toUnmodifiableList());
+          admin.partitions(Set.of(topic)).toCompletableFuture().join().stream().toList();
       Assertions.assertTrue(config.raw().containsValue("lz4"));
       Assertions.assertEquals(
           List.of(0, 2),
-          partitions.get(0).replicas().stream().map(NodeInfo::id).collect(Collectors.toList()));
+          partitions.get(0).replicas().stream().map(Broker::id).collect(Collectors.toList()));
       Assertions.assertEquals(
           List.of(2, 1),
-          partitions.get(1).replicas().stream().map(NodeInfo::id).collect(Collectors.toList()));
-      Assertions.assertEquals(0, partitions.get(0).leader().get().id());
-      Assertions.assertEquals(2, partitions.get(1).leader().get().id());
+          partitions.get(1).replicas().stream().map(Broker::id).collect(Collectors.toList()));
+      Assertions.assertEquals(0, partitions.get(0).leaderId().get());
+      Assertions.assertEquals(2, partitions.get(1).leaderId().get());
     }
   }
 
@@ -999,7 +998,6 @@ public class AdminTest {
               .forEach(
                   c -> {
                     Assertions.assertNotNull(c.groupId());
-                    Assertions.assertNotNull(c.coordinator());
                     Assertions.assertNotNull(c.assignor());
                     Assertions.assertNotNull(c.state());
                   });
@@ -1046,8 +1044,7 @@ public class AdminTest {
           () -> {
             var partitionReplicas =
                 admin.clusterInfo(Set.of(topic)).toCompletableFuture().join().replicas();
-            return partitionReplicas.size() == 1
-                && partitionReplicas.get(0).nodeInfo().id() == broker;
+            return partitionReplicas.size() == 1 && partitionReplicas.get(0).brokerId() == broker;
           });
 
       var currentBroker =
@@ -1059,8 +1056,7 @@ public class AdminTest {
               .filter(replica -> replica.partition() == 0)
               .findFirst()
               .get()
-              .nodeInfo()
-              .id();
+              .brokerId();
       var allPath = admin.brokerFolders().toCompletableFuture().join();
       var otherPath =
           allPath.get(currentBroker).stream()
@@ -1114,7 +1110,7 @@ public class AdminTest {
               .findFirst()
               .get();
 
-      var currentBroker = currentReplica.nodeInfo().id();
+      var currentBroker = currentReplica.brokerId();
       var notExistReplica = (currentBroker + 1) % SERVICE.dataFolders().keySet().size();
       var nextDir = SERVICE.dataFolders().get(notExistReplica).iterator().next();
 
@@ -1144,7 +1140,7 @@ public class AdminTest {
       Utils.waitFor(
           () -> {
             var replicas = admin.clusterInfo(Set.of(topic)).toCompletableFuture().join().replicas();
-            return replicas.stream().allMatch(r -> r.nodeInfo().id() == broker);
+            return replicas.stream().allMatch(r -> r.brokerId() == broker);
           });
     }
   }
@@ -1251,7 +1247,7 @@ public class AdminTest {
             IntStream.range(0, 5)
                 .mapToObj(i -> consumer.poll(Duration.ofSeconds(1)))
                 .flatMap(FixedIterable::stream)
-                .collect(Collectors.toList());
+                .toList();
 
         Assertions.assertEquals(
             1, records.stream().filter(record -> record.key().equals(key)).count());
@@ -1277,38 +1273,7 @@ public class AdminTest {
       Assertions.assertEquals(3, brokers.size());
       brokers.forEach(broker -> Assertions.assertNotEquals(0, broker.config().raw().size()));
       Assertions.assertEquals(1, brokers.stream().filter(Broker::isController).count());
-      brokers.forEach(broker -> Assertions.assertNotEquals(0, broker.topicPartitions().size()));
-      brokers.forEach(
-          broker -> Assertions.assertNotEquals(0, broker.topicPartitionLeaders().size()));
-    }
-  }
-
-  @Test
-  void testBrokerFolders() {
-    try (var admin = Admin.of(SERVICE.bootstrapServers())) {
-      Assertions.assertEquals(
-          SERVICE.dataFolders().keySet().size(),
-          admin.brokers().toCompletableFuture().join().size());
-      // list all
-      SERVICE
-          .dataFolders()
-          .forEach(
-              (id, ds) ->
-                  Assertions.assertEquals(
-                      admin.brokerFolders().toCompletableFuture().join().get(id).size(),
-                      ds.size()));
-
-      admin
-          .brokers()
-          .toCompletableFuture()
-          .join()
-          .forEach(
-              broker ->
-                  Assertions.assertEquals(
-                      broker.topicPartitions().size(),
-                      broker.dataFolders().stream()
-                          .mapToInt(e -> e.partitionSizes().size())
-                          .sum()));
+      brokers.forEach(broker -> Assertions.assertNotEquals(0, broker.topicPartitionPaths().size()));
     }
   }
 
@@ -1387,8 +1352,7 @@ public class AdminTest {
                       .collect(
                           Collectors.groupingBy(
                               replica -> TopicPartition.of(replica.topic(), replica.partition()),
-                              Collectors.mapping(
-                                  replica -> replica.nodeInfo().id(), Collectors.toList())));
+                              Collectors.mapping(Replica::brokerId, Collectors.toList())));
 
       IntStream.range(0, partitionCount)
           .forEach(p -> admin.moveToBrokers(Map.of(TopicPartition.of(topic, p), List.of(0, 1, 2))));
@@ -1414,10 +1378,7 @@ public class AdminTest {
               .toCompletableFuture()
               .join();
       Assertions.assertNotEquals(0, states.size());
-      var producerState =
-          states.stream()
-              .filter(s -> s.topic().equals(topic))
-              .collect(Collectors.toUnmodifiableList());
+      var producerState = states.stream().filter(s -> s.topic().equals(topic)).toList();
       Assertions.assertEquals(1, producerState.size());
     }
   }
@@ -1430,7 +1391,7 @@ public class AdminTest {
       var quotas =
           admin.quotas(Set.of(QuotaConfigs.IP)).toCompletableFuture().join().stream()
               .filter(q -> q.targetValue().equals(Utils.hostname()))
-              .collect(Collectors.toList());
+              .toList();
       Assertions.assertNotEquals(0, quotas.size());
       quotas.forEach(
           quota -> {
@@ -1464,7 +1425,7 @@ public class AdminTest {
           admin.quotas(Set.of(QuotaConfigs.CLIENT_ID)).toCompletableFuture().join().stream()
               .filter(q -> q.targetValue().equals(Utils.hostname()))
               .filter(q -> q.limitKey().equals(QuotaConfigs.PRODUCER_BYTE_RATE_CONFIG))
-              .collect(Collectors.toList());
+              .toList();
       Assertions.assertNotEquals(0, quotas.size());
       quotas.forEach(
           quota -> Assertions.assertEquals(DataRate.Byte.of(100).byteRate(), quota.limitValue()));
@@ -1494,7 +1455,7 @@ public class AdminTest {
           admin.quotas(Set.of(QuotaConfigs.CLIENT_ID)).toCompletableFuture().join().stream()
               .filter(q -> q.targetValue().equals(Utils.hostname()))
               .filter(q -> q.limitKey().equals(QuotaConfigs.CONSUMER_BYTE_RATE_CONFIG))
-              .collect(Collectors.toList());
+              .toList();
       Assertions.assertNotEquals(0, quotas.size());
       quotas.forEach(
           quota -> Assertions.assertEquals(DataRate.Byte.of(1000).byteRate(), quota.limitValue()));
@@ -1525,14 +1486,9 @@ public class AdminTest {
           .join()
           .forEach(
               broker ->
-                  broker
-                      .dataFolders()
-                      .forEach(
-                          d ->
-                              d.partitionSizes().entrySet().stream()
-                                  .filter(e -> e.getKey().topic().equals(topic))
-                                  .map(Map.Entry::getValue)
-                                  .forEach(v -> Assertions.assertEquals(0, v))));
+                  broker.topicPartitionPaths().stream()
+                      .filter(tp -> tp.topic().equals(topic))
+                      .forEach(d -> Assertions.assertEquals(0, d.size())));
     }
   }
 
@@ -1602,8 +1558,7 @@ public class AdminTest {
 
   @Test
   void testDeleteTopic() {
-    var topic =
-        IntStream.range(0, 4).mapToObj(x -> Utils.randomString()).collect(Collectors.toList());
+    var topic = IntStream.range(0, 4).mapToObj(x -> Utils.randomString()).toList();
 
     try (var admin = Admin.of(SERVICE.bootstrapServers())) {
       topic.forEach(
@@ -1683,7 +1638,7 @@ public class AdminTest {
             .toCompletableFuture()
             .join();
       }
-      String groupId = null;
+      String groupId;
       try (var consumer =
           Consumer.forTopics(Set.of(topic))
               .bootstrapServers(SERVICE.bootstrapServers())
@@ -1713,7 +1668,7 @@ public class AdminTest {
             .toCompletableFuture()
             .join();
       }
-      String groupId = null;
+      String groupId;
       try (var consumer =
           Consumer.forTopics(Set.of(topic))
               .bootstrapServers(SERVICE.bootstrapServers())
